--- a/book.toml
+++ b/book.toml
@@ -5,5 +5,8 @@ multilingual = false
 src = "src"
 title = "huarkiou's documentations"
 
-[output.html]
-mathjax-support = true
+# [output.html]
+# mathjax-support = true
+
+[preprocessor.katex]
+after = ["links"]
